fix: upload modal not visible when scrolling

--- a/src/components/upload-modal/upload-modal.scss
+++ b/src/components/upload-modal/upload-modal.scss
@@ -2,7 +2,7 @@
   width: calc(100% - 2rem);
   left: 1rem;
   height: calc(100% - 5rem);
-  position: absolute;
+  position: fixed;
   z-index: 10;
   top: 6.5rem;
   border-radius: 0.5rem;
